opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/textutils"
bug-reports: "https://github.com/janestreet/textutils/issues"
dev-repo: "git+https://github.com/janestreet/textutils.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/textutils/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "4.14.0"}
  "core"             {>= "v0.16" & < "v0.17"}
  "core_kernel"      {>= "v0.16" & < "v0.17"}
  "core_unix"        {>= "v0.16" & < "v0.17"}
  "ppx_jane"         {>= "v0.16" & < "v0.17"}
  "textutils_kernel" {>= "v0.16" & < "v0.17"}
  "dune"             {>= "2.0.0"}
  "uutf"             {>= "1.0.2"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Text output utilities"
description: "
"
