opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/textutils"
bug-reports: "https://github.com/janestreet/textutils/issues"
dev-repo: "git+https://github.com/janestreet/textutils.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/textutils/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "dune"        {>= "3.17.0"}
  "uutf"        {= "1.0.3+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Text output utilities"
description: "
"
